--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.zipcoder</groupId>
-    <artifactId>spring-demo</artifactId>
+    <artifactId>springquickpoll</artifactId>
     <version>1.0-SNAPSHOT</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -49,6 +49,7 @@
             <version>1</version>
         </dependency>
     </dependencies>
+
 
 
 </project>
